--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Health and Wellness Tracker</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
-    <script defer src="script.js"></script> <!-- Link to your JavaScript file -->
+    <link rel="stylesheet" href="styles.css"> 
+    <script defer src="script.js"></script>
 </head>
 <body>
     <header>
@@ -12,7 +12,7 @@
         <p>Your personal fitness companion</p>
     </header>
     <div class="container">
-        <button id="logout" style="display: none;">Logout</button> <!-- Logout Button -->
+        <button id="logout" style="display: none;">Logout</button>
         
         <div class="section" id="user-registration">
             <h2>User Registration</h2>
